--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "chart.js": "^4.4.7",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-dragdata": "^2.3.1",
     "cra-template": "1.2.0",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
